# shelley-bio

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  test_interactive_rendering.py  test_rendering.py
docs/: COMMAND_REFERENCE.md  DEVELOPER_REFERENCE.md  HOW_TO_QUERY.md
shelley_bio/: __init__.py
shelley_bio/builder/: __init__.py  cvmfs_builder.py
shelley_bio/client/: __init__.py  cli.py
shelley_bio/scripts/: __init__.py  batch_builder.py
shelley_bio/server/: __init__.py  mcp_server.py
shelley_bio/utils/: __init__.py  constants.py  style.py
tests/: test_cvmfs_builder.py
