[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelley-bio"
version = "1.0.0"
description = "A powerful bioinformatics tool finder and module builder for CVMFS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BioCommons"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
shelley-bio = "shelley_bio.client.cli:main"
shelley-bio-batch = "shelley_bio.scripts.batch_builder:main"

[project.urls]
"Homepage" = "https://github.com/shelley-bio/shelley-bio"
"Bug Reports" = "https://github.com/shelley-bio/shelley-bio/issues"
"Source" = "https://github.com/shelley-bio/shelley-bio"

[tool.setuptools]
packages = ["shelley_bio", "shelley_bio.client", "shelley_bio.server", "shelley_bio.builder", "shelley_bio.scripts"]

[tool.setuptools.package-data]
shelley_bio = ["*.yaml", "*.json.gz"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true